videomaterial.cpp: Prevent the use of uninitialized textures for RGB formats

https://bugzilla.gnome.org/show_bug.cgi?id=751770